<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_book_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="all"
    tools:context="herreraa.myreviews.BookDetailsActivity"
    tools:showIn="@layout/activity_book_details"
    android:background="@drawable/paper"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serifHello World!"
            android:text="@string/strBookTitle"
            android:id="@+id/lblTitlePrompt"
            android:layout_weight="1"
            android:layout_width="160dp"/>

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtBookTitle"
            android:textSize="14sp"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/strBookAuthor"
            android:layout_height="wrap_content"
            android:id="@+id/lblBookAuthorPrompt"
            android:layout_weight="1"
            android:layout_width="160dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtBookAuthor"
            android:textSize="14sp"
            android:enabled="false"
            android:layout_below="@+id/lblTitlePrompt"
            android:layout_toRightOf="@+id/lblBookReviewPrompt"
            android:layout_toEndOf="@+id/lblBookReviewPrompt"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblBookGenrePrompt"
            android:text="@string/strBookGenre"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="160dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtBookGenre"
            android:textSize="14sp"
            android:enabled="false"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblBookDateStartedPrompt"
            android:text="@string/strBookDateStarted"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="160dp"/>

        <EditText
            android:ems="10"
            android:id="@+id/txtBookDateStarted"
            android:textSize="14sp"
            android:enabled="false"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/strBookDateFinished"
            android:layout_height="wrap_content"
            android:id="@+id/lblBookDateFinishedPrompt"
            android:layout_below="@+id/imgBookCover"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_width="160dp"/>

        <EditText
            android:inputType="text"
            android:ems="10"
            android:id="@+id/txtBookDateFinished"
            android:textSize="14sp"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rtgStars"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:isIndicator="true"
            android:layout_weight="1"
            android:theme="@style/RatingBar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:text="Review"
            android:layout_height="wrap_content"
            android:id="@+id/lblGameReview"
            android:layout_weight="1"
            android:layout_width="160dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtGameReview"
            android:background="@android:color/darker_gray"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <Button
            android:text="Edit"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGameEdit"
            android:onClick="btnEditOnClick" />

        <Button
            android:text="Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGameDelete"
            android:layout_weight="1"
            android:onClick="btnDeleteOnClick"
            android:enabled="false" />

        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGameSave"
            android:layout_weight="1"
            android:onClick="btnSaveOnClick"
            android:enabled="false" />

    </LinearLayout>


    <!--<ImageView-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:id="@+id/imgBookCover"-->
        <!--android:layout_width="@dimen/bookCoverHeight"-->
        <!--android:layout_height="@dimen/bookCoverWidth"-->
        <!--android:contentDescription="@string/strBookCoverDescription" />-->

    <!--<TextView-->
        <!--android:text="@string/strBookReview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/rtgStars"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:id="@+id/lblBookReviewPrompt" />-->

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:inputType="textPersonName"-->
        <!--android:ems="10"-->
        <!--android:layout_below="@+id/lblBookReviewPrompt"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:id="@+id/txtReview"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_height="150dp"-->
        <!--android:textSize="18sp"-->
        <!--android:gravity="top"-->
        <!--android:background="@color/colorReviewBackground"-->
        <!--android:enabled="false" />-->

    <!--<Button-->
        <!--android:text="@string/strBookEdit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/txtReview"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:id="@+id/btnEdit"-->
        <!--android:onClick="btnEditOnClick" />-->

    <!--<Button-->
        <!--android:text="@string/strBookSave"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/txtReview"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:id="@+id/btnSave"-->
        <!--android:onClick="btnSaveOnClick"-->
        <!--android:enabled="false" />-->
    <!---->

    <!--<Button-->
        <!--android:text="@string/btnDelete"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/btnDelete"-->
        <!--android:layout_below="@+id/txtReview"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:enabled="false"-->
        <!--android:onClick="btnDeleteOnClick" />-->


</LinearLayout>
